@@ -1,3 +1,6 @@
+SVN
+* new [C-c /] hotkey to toggle output window
+
 0.5.99.1
 * Fixed bug #9619, script/server fails to start with [C-c C-c w s]
 * Added hotkeys for tests:
